--- a/index.html
+++ b/index.html
@@ -1,22 +1,101 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>AngularJS App</title>
+<!DOCTYPE HTML>
+<html lang="es">
+<head>
+	<!-- Codificación ñ o (´) -->
+	<meta charset="utf-8">
+	<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1 /> - See more at: http://www.phonegapspain.com/topic/ajustar-texto-segun-las-distintas-resoluciones-de-pantalla/#sthash.TrWdeP61.dpuf">
+	<!-- Icono de la Página -->
+	<link rel="icon" href="/images/icono.png">
+	<!-- Llamado del Boostrap -->
+	<!-- LLamado del CSS -->
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link rel="stylesheet" type="text/css" href="dist/fonts/style.css">
+	<!-- Nombre Principal de la Página -->
+	<title>Learning AngularJS</title>
+ 
+</head>
 
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
-
-    <script src="bower_components/angular/angular.js"></script>
-
-    <!-- include source files here... -->
+<body data-ng-app="appMusic">
+	<div class="row">
+		<div class="col-md-12 principal">MUSICANG</div>
+	</div>
+	<!-- Formulario Busqueda -->
+	<div class="row">
+		<div class="col-md-9"></div>
+		<div class="col-md-3">
+			<div class="input-group cuadroBuscar">
+				<span class="input-group-addon"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></span>
+				<input type="text" class="form-control" placeholder="Search Song" data-ng-model="buscar">
+			</div>
+		</div>
+	</div>
+	<!-- ******************************************************************************************************************
+	********************************************* Menú Principal de la Página *********************************************
+	***********************************************************************************************************************-->
+    <div class="row">
+        <div class="col-md-12">
+            <div class="excentrico">
+                <ul id="nav">
+                    <li class='text' data-ng-click="Ordenar = 'name'; reverse=false"><span data-ng-click="Ordenar = '-name'; reverse=false">Name Song ♪</span></li>
+                    <li class='text' data-ng-click="Ordenar = 'artist.name'; reverse=false"><span data-ng-click="Ordenar = '-artist.name'; reverse=false">Order by Artist♪</span></li>
+                    <li class='text' data-ng-click="Ordenar = 'playcount'; reverse=false"><span data-ng-click="Ordenar = '-playcount'; reverse=false">PlayCounts ♪</span></li>
+                    <li class='text'  data-ng-click="Ordenar = 'duration'; reverse=false"><span data-ng-click="Ordenar = '-duration'; reverse=false">Duration ♪</span></li>
+                    <li class='text' data-ng-click="Ordenar = 'listeners'; reverse=false"><span data-ng-click="Ordenar = '-listeners'; reverse=false">Listeners ♪</span></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+	<!-- ******************************************************************************************************************
+	***********************************************************************************************************************
+	***********************************************************************************************************************-->
+	<div class="row" data-ng-app="appMusic">
+        <div class="col-md-3"></div>
+        <div class="col-md-7 table-responsive" data-ng-controller="musicController">
+            <table class="table-bordered">
+                <tr>
+                    <th class="titulos" >Name Song</th>
+                    <th class="titulos">Name Artist</th>
+                    <th class="titulos">PlayCounts</th>
+                    <th class="titulos">Duration</th>
+                    <th class="titulos">Listeners</th>
+                    <th class="titulos">Picture</th>
+                </tr>
+                <tr data-ng-repeat="music in musics | filter:buscar | orderBy:Ordenar:reverse">
+                    <td class="most">{{music.name }}</td>
+                    <td class="most">{{music.artist.name}}</td>
+                    <td class="most">{{music.playcount}}</td>
+                    <td class="most">{{music.duration * 1000|date:"mm:ss"}}</td>
+                    <td class="most">{{music.listeners}}</td>
+                    <td data-ng-show="{{music.image[1]}}"><img data-ng-src="{{music.image[1] | soloUrl}}" class="img"></td>
+                </tr>
+            </table>
+					<!-- ******************************************************************************************************************
+	****************************************** Inicio de Barra de Redes Sociales ******************************************
+	***********************************************************************************************************************-->
+	<div class="social">
+		<ul>
+			<li><a href="https://www.facebook.com/cognits?fref=ts" target="_blank" class="icon-facebook"></a></li>
+			<li><a href="https://www.linkedin.com/company/cognits" target="_blank" class="icon-linkedin"></a></li>
+			<li><a href="https://plus.google.com/108479858316238835078/posts" target="_blank" class="icon-google-plus"></a></li>
+			<li><a href="https://github.com/cognits" target="_blank" class="icon-github3"></a></li>
+			<li><a href="http://www.cognits.co/apply" target="_blank" class="icon-embed"></a></li>
+		</ul>
+	</div>
+        </div><!-- Fin del Div que tiene el Controlador musicController -->
+        <div class="col-md-2"></div>
+    </div>
+    <!-- ******************************************************************************************************************
+	************************************* SCRIPTS BOOSTRAP, JQUERY, JAVASCRIPT, AJAX **************************************
+	***********************************************************************************************************************-->
+    <script src= "https://ajax.googleapis.com/ajax/libs/angularjs/1.3.11/angular.min.js"></script>
+    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script src="dist/js/bootstrap.js"></script>
+    <script>"https://code.angularjs.org/1.3.10/angular-animate.js"</script>
     <script src="js/script.js"></script>
+    <!-- ******************************************************************************************************************
+	***********************************************************************************************************************
+	***********************************************************************************************************************-->
 
-
-  </head>
-
-  <body ng-app="app">
-
-    <h1>{{ title }}</h1>
-
-  </body>
+</body>
 </html>
